trunk/Archive2/8a/0c2fc34793b007/output
-------- clang++ -----------
main.cpp:13:10: error: no viable conversion from 'istream' (aka 'basic_istream<char>') to 'bool'
{ return std::cin ; } // *** error: no implicit conversion from std::cin to bool
         ^~~~~~~~
main.cpp:16:10: error: no viable conversion from 'istream' (aka 'basic_istream<char>') to 'const void *'
{ return std::cin ; } // *** error: no implicit conversion from std::cin to const void*
         ^~~~~~~~
2 errors generated.


---------- g++ -------------

compiled without errors
